--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,21 @@
     ],
     "require": {},
     "require-dev": {
-        "codegyre/robo": "*",
-        "fxp/composer-asset-plugin": "~1.0"
+        "codegyre/robo": ">=0.5.4",
+        "fxp/composer-asset-plugin": "~1.0",
+        "bower-asset/jquery": "1.11.*",
+        "bower-asset/bootstrap-sass-official": "~3.3",
+        "bower-asset/yamm3": "~1.1"
+    },
+    "autoload": {
+        "psr-4": { "": "./" }
+    },
+    "scripts" : {
+        "pre-install-cmd": [
+            "ComposerHelper::skipAssets"
+        ],
+        "post-install-cmd": [
+            "composer.phar update"
+        ]
     }
 }
